Fixing height issues on mobile (webkit)

--- a/src/index/style.scss
+++ b/src/index/style.scss
@@ -11,10 +11,14 @@ body,
 #app,
 #viewDiv
  {
+  height: 100vh;
+  /* mobile viewport bug fix */
+  height: -webkit-fill-available;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   margin: 0;
   padding: 0;
+  overscroll-behavior: none;
 }
 
 #viewDiv {
